--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.26.1",
     "postcss": "^8.3.11",
+    "prettier": "2.4.1",
     "tailwindcss": "^2.2.19"
   }
 }
